compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__missing_case_body.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: case True
---
----- SOURCE CODE
case True

----- ERROR
error: Missing case body
  ┌─ /src/one/two.gleam:1:1
  │
1 │ case True
  │ ^^^^^^^^^

This case expression is missing its body.
