compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__missing_constructor_arguments.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\npub type A {\n  A(Int)\n}\n\nconst a = A()\n"
---
----- SOURCE CODE

pub type A {
  A(Int)
}

const a = A()


----- ERROR
error: Incorrect arity
  ┌─ /src/one/two.gleam:6:11
  │
6 │ const a = A()
  │           ^^^ Expected 1 argument, got 0
