compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__missing_type_constructor_arguments_in_type_annotation_1.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "pub fn main() -> Result() {}"
---
----- SOURCE CODE
pub fn main() -> Result() {}

----- ERROR
error: Incorrect arity
  ┌─ /src/one/two.gleam:1:18
  │
1 │ pub fn main() -> Result() {}
  │                  ^^^^^^^^ Expected 2 type arguments, got 0

`Result` requires 2 type arguments but none where provided.
