compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__module_could_not_unify10.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "fn main() {\n            let #(y, [..x]): #(x, List(x)) = #(\"one\", [1,2,3])\n            x\n        }"
---
----- SOURCE CODE
fn main() {
            let #(y, [..x]): #(x, List(x)) = #("one", [1,2,3])
            x
        }

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:2:46
  │
2 │             let #(y, [..x]): #(x, List(x)) = #("one", [1,2,3])
  │                                              ^^^^^^^^^^^^^^^^^

Expected type:

    #(x, List(x))

Found type:

    #(String, List(Int))
